<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".SplashActivity"
    android:id="@+id/splash_screen">

    <ImageView
        android:id="@+id/logoapp"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:backgroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/splash_logo"
        android:contentDescription="@string/desc_splash_img" />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logoapp"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/desc_splash_title" />

    <TextView
        android:id="@+id/splash_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splash_title"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/desc_splash_subtitle" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />
</RelativeLayout>