<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    >

    <ImageView
        android:id="@+id/vp_img1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998"
        app:srcCompat="@drawable/viewpager_content_1"
        android:contentDescription="@string/desc_vp_img1" />

    <TextView
        android:id="@+id/vp_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vp_img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/desc_vp_title1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_img1" />

    <TextView
        android:id="@+id/vp_subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vp_title1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/desc_vp_subtitle1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vp_title1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:onClick="goToMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/vp_subtitle1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="Mulai Sekarang!"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_shade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>